fix broked CSS styles in all pages. Not responsive, other than the about-is page

--- a/css/memory-match.css
+++ b/css/memory-match.css
@@ -34,12 +34,9 @@ header button {
 }
 
 #cards-section {
-  margin-top: 10px;
   display: flex; 
   flex-wrap: wrap;
   justify-content: space-between; 
-  margin-right: 700px;
-  margin-left: 700px;
 }
 
 footer {
